Meta tags added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <title>Kushdeep Singh Walia</title>
+        <meta name="keywords" content="kushdeepwalia, Kushdeep Walia, Kushdeep Singh Walia, Kushdeep, Walia, Portfolio, Kushdeep Singh">
+        <meta name="description" content="I am web developer and a third year student in Guru Tegh Bahadur Institute of  Technology. I am also a C++ coder with an experience of more than 3 years. I am part of Developer Students Club, by Google Developers. ">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="author" content="Kushdeep Walia">
+
+        <title>Kushdeep Walia</title>
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="styleIndex.css">
@@ -52,7 +56,7 @@
         </header>
         <section class="d-flex justify-content-center mb-5">
             <div id="myPhoto" class="mt-5 mr-5 d-flex align-items-end"> 
-                <h5 id="myName">Kushdeep Singh Walia</h5>
+                <h5 id="myName">Kushdeep Walia</h5>
             </div>
             <div id="about" class="mt-5 ml-5 bg-white p-3 pl-4 pr-4 h-auto w-50 bg-white">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sint saepe obcaecati officia non harum necessitatibus corrupti eveniet iure quae magnam quis, sit expedita, id fuga voluptas quos maiores modi sunt accusantium molestiae pariatur delectus. Nemo similique assumenda esse neque rerum repellendus cum consequuntur, perferendis libero dolores. Ad nulla quae quod temporibus odio unde dolor eius, commodi eos ipsam deleniti voluptates repellat aliquam animi nobis qui id! Enim velit, tempore numquam deserunt labore dolorum ea sint, facere officiis dolore consectetur debitis, animi temporibus quam placeat ipsum itaque error repellendus! Quos blanditiis veritatis eum sunt nostrum quam inventore veniam, reprehenderit neque.
