more meta tags added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <meta name="description" content="I am web developer and a third year student in Guru Tegh Bahadur Institute of  Technology. I am also a C++ coder with an experience of more than 3 years. I am part of Developer Students Club, by Google Developers. ">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="Kushdeep Walia">
+        <meta property="og:title" content="Kushdeep Walia" />
+        <meta property="og:type" content="Portfolio" />
+        <meta property="og:url" content="https://www.kushdeepwalia.tk/" />
+        <meta property="og:image" content="Images/myPhoto.jpeg" />
 
         <title>Kushdeep Walia</title>
         
@@ -54,15 +58,15 @@
                 </a>
             </div>
         </header>
-        <section class="d-flex justify-content-center mb-5">
-            <div id="myPhoto" class="mt-5 mr-5 d-flex align-items-end"> 
+        <section class="d-flex justify-content-center mb-5 ml-auto mr-auto" style="width: 80vw;">
+            <div id="myPhoto" class="mt-5 mr-4 d-flex justify-content-center align-items-end" style="width: 250px;"> 
                 <h5 id="myName">Kushdeep Walia</h5>
             </div>
             <div id="about" class="mt-5 ml-5 bg-white p-3 pl-4 pr-4 h-auto w-50 bg-white">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sint saepe obcaecati officia non harum necessitatibus corrupti eveniet iure quae magnam quis, sit expedita, id fuga voluptas quos maiores modi sunt accusantium molestiae pariatur delectus. Nemo similique assumenda esse neque rerum repellendus cum consequuntur, perferendis libero dolores. Ad nulla quae quod temporibus odio unde dolor eius, commodi eos ipsam deleniti voluptates repellat aliquam animi nobis qui id! Enim velit, tempore numquam deserunt labore dolorum ea sint, facere officiis dolore consectetur debitis, animi temporibus quam placeat ipsum itaque error repellendus! Quos blanditiis veritatis eum sunt nostrum quam inventore veniam, reprehenderit neque.
             </div>
         </section>
-        <section class="d-flex justify-content-center mt-3 mb-5">
+        <section class="d-flex justify-content-center mt-3 mb-5 ml-auto mr-auto" style="width: 80vw;">
             <div id="proSkill" class="ml-2 mr-2 bg-white pt-3 pb-4 pl-4 pr-4 h-auto w-50 bg-white">
                 <div id="html">
                     <h6>HTML</h6>
