--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="./images/myCutOut.png" alt="" id="myHeroPic">
         </div>
         <div class="myIntro">
-            <div class="name">Heyy<br>This is <span>Kushdeep Walia</span></div>
+            <div class="name">Heyy..<br>This is <span>Kushdeep Walia</span></div>
             <div class="line1">I am a <span id="line1"></span><span class="cursor">&nbsp;</span></div>
             <div class="line2" id="line2">Love to play with Developer Tools</div>
             <div class="buttons">
