meta tags added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Kushdeep Walia">
+    <meta name="description" content="Web Developer, Freelancer">
+    <meta name="og:image" content="./images/My Pic.jpeg">
     <title>Kushdeep Walia</title>
     <!-- Header CSS -->
     <link rel="stylesheet" href="./css/header.css">
@@ -183,6 +186,7 @@
     
     <!-- Skills Ends -->
     <!-- Services Starts -->
+
     <!-- <section id="service" class="service-section">
         <div class="heading">Services</div>
         <div class="service-box">
@@ -194,6 +198,7 @@
             <div class="service-card"></div>
         </div>
     </section> -->
+    
     <!-- Services Ends -->
     <!-- Projects Begin -->
 
