--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="./css/project-card.css" />
     <!-- Testimonial CSS -->
     <link rel="stylesheet" href="./css/testimonial.css" />
+    <!-- Experience CSS -->
+    <link rel="stylesheet" href="./css/experience.css" />
     <!-- owl CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" />
     <!-- font awesome -->
@@ -216,6 +218,43 @@
     </section> -->
 
     <!-- Services Ends -->
+    <!-- Experience Begins -->
+
+    <section id="experience" class="exp-section">
+        <div class="heading" id="work">Work & Experience</div>
+        <div class="exp">
+            <div class="partOne">
+                <div class="part">
+                    <div class="compname">dsc gtbit</div>
+                    <div class="timeperiod">october 2018 to present</div>
+                    <div class="workrole">Management Head</div>
+                    <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
+                </div>
+                <div class="part">
+                    <div class="compname">dsc gtbit</div>
+                    <div class="timeperiod">october 2018 to present</div>
+                    <div class="workrole">Management Head</div>
+                    <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
+                </div>
+            </div>
+            <div class="partTwo">
+                <div class="part">
+                    <div class="compname">dsc gtbit</div>
+                    <div class="timeperiod">october 2018 to present</div>
+                    <div class="workrole">Management Head</div>
+                    <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
+                </div>
+                <div class="part">
+                    <div class="compname">dsc gtbit</div>
+                    <div class="timeperiod">october 2018 to present</div>
+                    <div class="workrole">Management Head</div>
+                    <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Ends -->
     <!-- Projects Begin -->
 
     <section id="project" class="project-section">
