completed for the first time ever

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="oYtwC3oLSVG8zwp-G2Ap8cSDgDq9Jkpol2YUVgRT9S8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:type" content="Portfolio Personal Portfolio" />
+    <meta property="og:url" content=”https://kushdeepwalia.tk” />
+    <meta property="og:description" content="Hey There, I am Kushdeep Walia - Web Developer and an active Open Source Contributor. You can view my Portfolio - my personal website." />
+    <meta name="title" content="Kushdeep Walia Personal Portfolio" />
+    <meta name="description" content="Kushdeep Walia - a Web Developer and an active Open Source Contributor. Here is my personal portfolio. You can hire me up by mailing me." />
+
     <meta name="author" content="Kushdeep Walia" />
-    <meta name="description" content="Web Developer, Freelancer" />
     <meta name="og:image" content="./images/My Pic.jpeg" />
     <title>Kushdeep Walia</title>
+    <link rel="icon" href="./images/circle-pic.png" />
     <!-- Header CSS -->
     <link rel="stylesheet" href="./css/header.css" />
+    <!-- Footer CSS -->
+    <link rel="stylesheet" href="./css/footer.css" />
     <!-- Hero CSS -->
     <link rel="stylesheet" href="./css/hero.css" />
     <!-- About CSS -->
@@ -35,38 +45,45 @@
     <script src="./node_modules/waypoints/lib/noframework.waypoints.min.js"></script>
   </head>
   <body>
-    <!-- Header Begins -->
 
-    <header class="header" id="home" style="justify-content: flex-end;">
-      <img src="./images/My Pic.jpeg" alt="" id="myPic" style="display: none;"/>
-      <nav class="nav">
-        <ul>
-          <li><a id="homeBtn">Home</a></li>
-          <li><a id="aboutBtn">About</a></li>
-          <li><a id="skillsBtn">Skills</a></li>
-          <li><a id="projectBtn">Projects</a></li>
-          <li><a id="contactBtn">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="hamicon" id="hamicon">
-        <div class="icon-line"></div>
-        <div class="icon-line"></div>
-        <div class="icon-line"></div>
-      </div>
-    </header>
-    <nav class="nav" id="nav">
-      <ul>
-        <li><a id="homeBtn2">Home</a></li>
-        <li><a id="aboutBtn2">About</a></li>
-        <li><a id="skillsBtn2">Skills</a></li>
-        <li><a id="projectBtn2">Projects</a></li>
-        <li><a id="contactBtn2">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="arrowUp inactive" id="arrowUp">
+        <i class="fa fa-angle-up" aria-hidden="true"></i>
+    </div>
+
+    <!-- Header Begins -->
+    <section id="homeSec">
+        <header class="header" id="home" style="justify-content: flex-end;">
+          <img src="./images/My Pic.jpeg" alt="" id="myPic" style="display: none;"/>
+          <nav class="nav">
+            <ul>
+              <li><a id="homeBtn">Home</a></li>
+              <li><a id="aboutBtn">About</a></li>
+              <li><a id="skillsBtn">Skills</a></li>
+              <li><a id="projectBtn">Projects</a></li>
+              <li><a id="contactBtn">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="hamicon" id="hamicon">
+            <div class="icon-line"></div>
+            <div class="icon-line"></div>
+            <div class="icon-line"></div>
+          </div>
+        </header>
+        <nav class="nav" id="nav">
+          <ul>
+            <li><a id="homeBtn2">Home</a></li>
+            <li><a id="aboutBtn2">About</a></li>
+            <li><a id="skillsBtn2">Skills</a></li>
+            <li><a id="projectBtn2">Projects</a></li>
+            <li><a id="contactBtn2">Contact</a></li>
+          </ul>
+        </nav>
+    </section>
 
     <!-- Header Ends -->
+    
     <!-- Hero Box Starts -->
-
+    
     <div class="hero" id="hero">
       <div class="myPic">
         <img src="./images/myCutOut.png" alt="" id="myHeroPic" />
@@ -78,7 +95,7 @@
         </div>
         <div class="line2" id="line2">Love to play with Developer Tools</div>
         <div class="buttons">
-          <div class="downloadCV"><a href="#">Download CV</a></div>
+          <div class="downloadCV"><a href="https://drive.google.com/uc?export=download&id=1OLnQPPGjHUOgF1jIMYGm86DFGxjvskyV">Download CV</a></div>
           <div class="hireME">
             <a href="mailto:kushdeepwalia@outlook.com">Hire Me</a>
           </div>
@@ -387,21 +404,21 @@
         <div class="contact">
             <div class="myInfo">
                 <div class="phone">
-                    <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+                    <div class="icon"><i class="fa fa-2x fa-phone" aria-hidden="true"></i></div>
                     <div class="number">
                         <div class="numname">Phone No.</div>
                         <div class="numnum"><a href="tel:+919354752373">+91 93547 52373</a></div>
                     </div>
                 </div>
                 <div class="email">
-                    <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+                    <div class="icon"><i class="fa fa-2x fa-envelope-o" aria-hidden="true"></i></div>
                     <div class="mail">
                         <div class="mailname">Email</div>
                         <div class="mailEmail"><a href="mailto:kushdeepwalia@outlook.com">kushdeepwalia@outlook.com</a></div>
                     </div>
                 </div>
                 <div class="location">
-                    <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+                    <div class="icon"><i class="fa fa-2x fa-map-marker" aria-hidden="true"></i></div>
                     <div class="loca">
                         <div class="locaname">Location</div>
                         <div class="locaLocation">New Delhi, Delhi, India</div>
@@ -411,14 +428,14 @@
             <div class="form">
                 <form name="google-sheet" method="post">
                     <div class="nameEmail">
-                        <input type="text" name="Name" id="Name">
-                        <input type="email" name="Email" id="Email">
+                        <input placeholder="Name" required type="text" name="Name" id="Name">
+                        <input placeholder="Email" required type="email" name="Email" id="Email">
                     </div>
                     <div class="subject">
-                        <input type="text" name="Subject" id="Subject">
+                        <input type="text" required placeholder="Subject" name="Subject" id="Subject">
                     </div>
                     <div class="message">
-                        <textarea name="Message" id="Message" cols="30" rows="10"></textarea>
+                        <textarea name="Message" required id="Message" placeholder="Message" cols="30" rows="10"></textarea>
                     </div>
                     <div class="submit">
                         <input type="submit" value="Submit" id="Submit">
@@ -441,7 +458,7 @@
     <!-- Testimonial Js -->
     <!-- <script src="./js/testimonial.js"></script> -->
     <!-- Testimonial -->
-    <script>$(".container").owlCarousel({loop: true,autoplay: true,autoplayTimeOut: 100,autoplayHoverPause: true,responsive: {0 : {items: 1},768 : {items: 2},1000 : {items: 3}}});</script>
+    <script>$(".container").owlCarousel({loop: true,autoplay: true,autoplayTimeOut: 100,autoplayHoverPause: true,responsive: {0 : {items: 1},600 : {items: 2},1000 : {items: 3}}});</script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwvLnSaK39smtIvK9Hi6UEDp-PXcvEC3udCu7nGTF7PEG7REXTu/exec'
         const form = document.forms['google-sheet']
@@ -449,8 +466,11 @@
         form.addEventListener('submit', (e) => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-          .then(swal({title: "Good job!", text: "You clicked the button!", icon: "success"}),form.clear())
+          .then(
+                swal({title: "Good job!", text: "You clicked the button!", icon: "success"})
+            )
           .catch(error => console.error('Error!', error.message))
+          .then(location.reload())
         })
     </script>
     <script>
@@ -459,9 +479,14 @@
                 scrollTop: $("#contact").offset().top
             }, 500);
         });
+        $("#arrowUp").click(function() {
+            $('html, body').animate({
+                scrollTop: $("#homeSec").offset().top
+            }, 500);
+        });
         $("#homeBtn").click(function() {
             $('html, body').animate({
-                scrollBottom: $("#home").offset().top
+                scrollTop: $("#homeSec").offset().top
             }, 500);
         });
         $("#aboutBtn").click(function() {
@@ -486,7 +511,7 @@
         });
         $("#homeBtn2").click(function() {
             $('html, body').animate({
-                scrollTop: $("#home").offset().top
+                scrollTop: $("#homeSec").offset().top
             }, 500);
         });
         $("#aboutBtn2").click(function() {
