work experience updated

--- a/index.html
+++ b/index.html
@@ -248,31 +248,31 @@
         <div class="exp">
             <div class="partOne">
                 <div class="part">
-                    <div class="compname">dsc gtbit</div>
+                    <div class="compname"><a href="https://dsc.gtbit.org" rel="noopener" target="_blank">dsc gtbit</a></div>
                     <div class="timeperiod">october 2018 to present</div>
                     <div class="workrole">Management Head</div>
                     <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
                 </div>
                 <div class="part">
-                    <div class="compname">dsc gtbit</div>
-                    <div class="timeperiod">october 2018 to present</div>
-                    <div class="workrole">Management Head</div>
-                    <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
+                    <div class="compname"><a href="https://in.linkedin.com/company/iipc-gtbit" rel="noopener" target="_blank"> </a> iipc gtbit</div>
+                    <div class="timeperiod">april 2020 to present</div>
+                    <div class="workrole">Member - Management Team</div>
+                    <div class="jobdesc">My job here is to manage the events hosted in the name of the placement cell of our college. </div>
                 </div>
             </div>
             <div class="partTwo">
                 <div class="part">
+                    <div class="compname"><a href="https://genesisx.co/" rel="noopener" target="_blank">genesis x</a></div>
+                    <div class="timeperiod">july 2020 to present</div>
+                    <div class="workrole">Php Developer</div>
+                    <div class="jobdesc">Here, I develop and maintain websites with a backend in PHP.</div>
+                </div>
+                <!-- <div class="part">
                     <div class="compname">dsc gtbit</div>
                     <div class="timeperiod">october 2018 to present</div>
                     <div class="workrole">Management Head</div>
                     <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
-                </div>
-                <div class="part">
-                    <div class="compname">dsc gtbit</div>
-                    <div class="timeperiod">october 2018 to present</div>
-                    <div class="workrole">Management Head</div>
-                    <div class="jobdesc">My job here is to organise and manage the events hosted in the name of the DSC GTBIT society. </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
