--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta property="og:type" content="Portfolio Personal Portfolio" />
-	<meta property="og:url" content=”https://kushdeepwalia.tk” />
+	<meta property="og:url" content=”https://kushdeepwalia.in” />
 	<meta property="og:description" content="Hey There, I am Kushdeep Walia - Web Developer and an active Open Source Contributor. You can view my Portfolio - my personal website." />
 	<meta name="title" content="Kushdeep Walia Personal Portfolio" />
 	<meta name="description" content="Kushdeep Walia - a Web Developer and an active Open Source Contributor. Here is my personal portfolio. You can hire me up by mailing me." />
