--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<div class="line2" id="line2">Love to play with Developer Tools</div>
 			<div class="buttons">
 				<div class="downloadCV"><a
-						href="https://drive.google.com/uc?export=download&id=1rUWvv131J7ZZvL6jUO_kRqF511eEg-hb">Download
+						href="https://drive.google.com/uc?export=download&id=1wFl-2ELOL_Lyo7kSBgjidrRvqp1K0c__">Download
 						CV</a></div>
 				<div class="hireME">
 					<a href="mailto:kushdeepwalia@outlook.com">Hire Me</a>
@@ -157,7 +157,7 @@
 						<h3>IP University</h3>
 						<div class="card-info">
 							<h4>Guru Tegh Bahadur Institute of Technology</h4>
-							<h5>Aug 2018 - Present</h5>
+							<h5>Aug 2018 - July 2022</h5>
 							<p>Dept. of Computer Science</p>
 						</div>
 					</div>
@@ -263,7 +263,7 @@
 	<!-- Services Ends -->
 	<!-- Experience Begins -->
 
-	<section id="experience" class="exp-section">
+	<section id="experience" class="exp-section" style="display: none !important;">
 		<div class="heading" id="work">Work & Experience</div>
 		<div class="exp">
 			<div class="partOne">
@@ -334,7 +334,7 @@
 					<div class="icon"><i class="fa fa-2x fa-phone" aria-hidden="true"></i></div>
 					<div class="number">
 						<div class="numname">Phone No.</div>
-						<div class="numnum"><a href="tel:+919354752373">+91 93547 52373</a></div>
+						<div class="numnum"><a href="tel:+919953607706">+91 99536 07706</a></div>
 					</div>
 				</div>
 				<div class="email">
