Testimonial Component added

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Raleway&display=swap" rel="stylesheet">
    <title>Kushdeep Walia - Personal Portfolio</title>
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
    <style>
       :root {
          --priCol: #436bad;
