minor changes done

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
          --headingCol: #121212;
          --backGrey: #ececec;
          --underlineGrey: #adadad;
+         --cardHover: #ececec99;
       }
 
       * {
