--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
          --backGrey: #ececec;
          --underlineGrey: #adadad;
          --cardHover: #ececec99;
+         --borderGrey: #cacaca;
       }
 
       * {
